--- a/elderlycare.html
+++ b/elderlycare.html
@@ -12,6 +12,9 @@
         <link rel="stylesheet" href="elderly.css">
     </head>
     <body>
+        <a href="projects.html">
+            <img src="Logo.png" alt="Logo" class="logo">
+        </a>
         <div class="container">
             <div class="header">
                 <h1>Our Projects</h1>
@@ -38,6 +41,50 @@
                             A visit to a charitable trust was organized to promote the well-being of kids and elderly individuals. Activities included creative competitions for children to enhance their imagination and skills. A heartwarming moment was shared as the elderly joyfully joined in dancing, spreading smiles and happiness. A special lunch was arranged in memory of loved ones, and the day was made even more special by celebrating a birthday. The event created an atmosphere of warmth, unity, and joy, bringing people of different generations together.
                         </p>
                     </div>
+                </div>
+
+
+                <div class="project">
+                    <h2>Sandhya Suraksha
+
+                    </h2>
+                    <div class="project-content">
+                        <img src="elderly3.jpg" alt="Elderly Care">
+                        <p>
+                        The initiative focuses on supporting elderly individuals in old age homes, emphasizing the importance of honoring and caring for parents who have nurtured and guided us. By visiting these homes, the team aims to bring joy, spread smiles, and provide reassurance to the elderly, fostering a sense of companionship and care. The mission highlights the value of empathy and respect for elders, ensuring they feel loved and not forgotten. Through these visits, the team works to create a sense of dignity and belonging for the elderly.  </p>
+                    </div>
+                </div>
+
+                <div class="project">
+                    <h2>Sevashraya Orphange and Old age home
+                    </h2>
+                    <div class="project-content">
+                        <img src="elderly4.jpg" alt="Elderly Care">
+                        <p>
+                            On 3rd March 2019, Janmamithra organized a successful event at Sevashraya Orphanage and Old Age Home, bringing joy and warmth to both the children and elderly residents. Our team spent quality time interacting with them, engaging in activities that created a sense of belonging and happiness. As a gesture of goodwill and care, we concluded the event by distributing sweets and fruits, spreading smiles and ensuring everyone felt appreciated. We are deeply grateful to all those who joined hands in making this event a success. Their participation and support played a vital role in bringing this initiative to life.</p>
+                        </div>
+                </div>
+
+                <div class="project">
+                    <h2>Home of hopes
+                    </h2>
+                    <div class="project-content">
+                        <img src="elderly5.jpg" alt="Elderly Care">
+                        <p>
+                            On 23rd March 2019, Janmamithra organized a meaningful and successful event at Home of Hopes. The event was filled with compassion and care, bringing together volunteers and residents to create lasting memories. Our team’s efforts were evident in the smiles and happiness shared, as we engaged in activities that promoted love, unity, and support. The phrase “Give your hands to serve and your heart to love” truly captured the spirit of the day. We are grateful to everyone who joined their hands to make the event a success. The moments we captured during this event will forever remind us of the joy in serving others.
+                        </p>
+                        </div>
+                </div>
+
+                
+                <div class="project">
+                    <h2>Sai Old age home                    </h2>
+                    <div class="project-content">
+                        <img src="elderly6.jpg" alt="Elderly Care">
+                        <p>
+                            We visited Sri Sai Old Age Home with the intention of spreading joy and providing support to the elderly residents. During our visit, we donated beds with cots to ensure their comfort and well-being. The time spent with these remarkable individuals was both heartwarming and enriching, as we engaged in conversations, shared stories, and enjoyed each other’s company. The elderly residents, whom we fondly referred to as "Super Humans," brought warmth and positivity to the event. We concluded the day by distributing snacks, ensuring the elderly felt appreciated and cared for.
+                        </p>
+                        </div>
                 </div>
                 
             </div>
