--- a/environment.html
+++ b/environment.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="elderly.css">
 </head>
 <body>
+    <a href="projects.html">
+        <img src="Logo.png" alt="Logo" class="logo">
+    </a>
     <div class="container">
         <div class="header">
             <h1>Our Projects</h1>
@@ -23,6 +26,36 @@
                 </div>
             </div>
             
+
+            <div class="project">
+                <h2>Transformation                </h2>
+                <div class="project-content">
+                    <img src="environment2.jpg" alt="Environment Care">
+                    <p>
+                        The event focused on removing old posters from the walls and repainting them. Volunteers worked together to refresh the space, creating a cleaner and more vibrant environment. It was a simple yet effective initiative to enhance the surroundings. The task not only improved the aesthetics but also fostered teamwork and community spirit. Everyone involved contributed to making the space more welcoming and lively. The event served as a reminder of how small efforts can bring positive changes to our environment.    </p>
+                </div>
+            </div>
+
+
+            <div class="project">
+                <h2>A Day for Envirnonment                </h2>
+                <div class="project-content">
+                    <img src="environment3.jpg" alt="Environment Care">
+                    <p>
+                        The event focused on removing posters, stapled pins, and nails from trees to prevent harm and maintain their health. Volunteers worked together to carefully remove these items, ensuring that the trees were free from any damaging materials. This effort aimed to protect the environment and preserve the natural beauty of the area. By removing such objects, the team contributed to creating a safer and cleaner space for both the trees and the community.
+                    </div>
+            </div>
+
+
+            <div class="project">
+                <h2>Water for voiceless                </h2>
+                <div class="project-content">
+                    <img src="environment4.jpg" alt="Environment Care">
+                    <p>
+                        On 14th April 2019, Janmamithra organized a meaningful event aimed at promoting environmental sustainability. The event included a "Planting Saplings Drive" under the initiative "One Man One Plant," where participants helped plant trees to contribute to a greener future. We also distributed plants and pots to the public under the initiative "Water For Voiceless," designed to provide drinking water for birds. This event took place near Judicial Layout Talagatpura and was a huge success, with many members of the public actively joining in the sapling drive. The community's enthusiastic participation made the event even more special, as together, we worked toward environmental preservation and animal welfare.
+                    </div>
+            </div>
+
         </div>
     </div>
 </body>
