--- a/health.html
+++ b/health.html
@@ -7,6 +7,9 @@
     <link rel="stylesheet" href="elderly.css">
 </head>
 <body>
+    <a href="projects.html">
+        <img src="Logo.png" alt="Logo" class="logo">
+    </a>
     <div class="container">
         <div class="header">
             <h1>Our Projects</h1>
