--- a/soverignsupport.html
+++ b/soverignsupport.html
@@ -3,27 +3,85 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>soverignsupport Care</title>
+    <title>Janmamithra Projects</title>
     <link rel="stylesheet" href="elderly.css">
 </head>
 <body>
+    <a href="projects.html">
+        <img src="Logo.png" alt="Logo" class="logo">
+    </a>
     <div class="container">
         <div class="header">
             <h1>Our Projects</h1>
         </div>
         <div class="content">
-            <!-- First project -->
+
+            <!-- Independence Day Celebration -->
             <div class="project">
-                <h2>74th Independence day celebration
-                </h2>
+                <h2>Independence Day Celebration</h2>
                 <div class="project-content">
-                    <img src="soverign.jpg" alt="soverignsupport Care">
+                    <img src="soverignsupport4.jpg" alt="soverignsupport Care">
                     <p>
-                        On the occasion of the 74th Independence Day, an event was conducted at an orphanage and old age home to spread joy and positivity. Special meals were sponsored for the residents, bringing smiles to the faces of the children and elderly. Volunteers actively engaged with the children, organizing activities to keep them entertained and uplift their spirits. The event was particularly meaningful as it provided much-needed interaction and excitement for the children, who had been feeling low due to the prolonged school shutdown and lack of visitors.
-                         </p>
+                        On Independence Day, our Janmamithra team organized a heartfelt celebration at the Government school we proudly adopted in July 2018. The event was filled with patriotic fervor, as students, teachers, and our dedicated volunteers came together to honor the nation’s freedom. The program included flag hoisting, inspiring speeches, cultural performances by the students, and group activities that highlighted the spirit of independence. Our volunteers actively engaged with the students, encouraging them to reflect on the sacrifices of freedom fighters and the importance of being responsible citizens. The celebration fostered a deep sense of unity, pride, and commitment among everyone present, making it a memorable and impactful day for all.
+                    </p>
                 </div>
             </div>
-            
+
+            <!-- Independence Day 2019 -->
+            <div class="project">
+                <h2>Independence Day 2019</h2>
+                <div class="project-content">
+                    <img src="soverignsupport5.jpg" alt="soverignsupport Care">
+                    <p>
+                        Our team enthusiastically volunteered for the Independence Day program at Nachiketha Manovikasa Kendra, marking the third consecutive year of successfully organizing this event. A team of 30+ dedicated volunteers worked tirelessly to make the day special. From decorating the school premises with patriotic themes to assisting the children in preparing for various activities, every detail was handled with care and commitment. The celebrations included cultural programs and sports events, where the kids participated with excitement and energy. Our volunteers ensured smooth execution of all arrangements, fostering a joyful and inclusive atmosphere. The event was a testament to teamwork, dedication, and the spirit of Independence Day.
+                    </p>
+                </div>
+            </div>
+
+            <!-- International Yoga Day -->
+            <div class="project">
+                <h2>International Yoga Day</h2>
+                <div class="project-content">
+                    <img src="soverignsupport6.jpg" alt="soverignsupport Care">
+                    <p>
+                        The International Yoga Day event, held on 23rd June, was another successful initiative by our Janmamithra team. The event brought together a diverse group of participants, including elderly individuals and children, who practiced yoga as a way to promote health and well-being. We received tremendous support from our volunteers, whose efforts ensured the smooth execution of the event. In addition to the yoga session, we organized fun and engaging games for everyone, making the day more lively and interactive. The event concluded with a delicious lunch, offering an opportunity for all to relax and bond. This event not only promoted physical wellness but also fostered a sense of community and shared joy among participants.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Children's Day Celebration -->
+            <div class="project">
+                <h2>Children's Day Celebration</h2>
+                <div class="project-content">
+                    <img src="soverignsupport7.jpg" alt="soverignsupport Care">
+                    <p>
+                        Children’s Day, also known as Bal Divas, is celebrated on the birthday of India's first Prime Minister, Jawaharlal Nehru, who was affectionately called ‘Chacha Nehru’. This day emphasizes the importance of love, education, and affection for children, acknowledging that childhood is a time of innocence and playfulness. As Dr. Haim Ginott wisely said, "Children are like wet cement; whatever falls on them makes an impression." It is crucial to understand that every child has a unique learning style and pace, and they are all capable of succeeding when encouraged. Rather than focusing on how quickly a child learns, we should foster curiosity and a love for learning, which will last a lifetime and contribute to building a strong, educated nation. By nurturing curiosity, we are not just teaching them lessons but empowering them to continue their learning journey forever.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Kannada Rajyotsava Celebration -->
+            <div class="project">
+                <h2>Kannada Rajyotsava Celebration</h2>
+                <div class="project-content">
+                    <img src="soverignsupport8.jpg" alt="soverignsupport Care">
+                    <p>
+                        The event organized by Janmamithra at Kalparaksha Charitable Trust, held on the occasion of Kannada Rajyotsava and Deepavali, was truly memorable. Spending time with the children of the orphanage was an enriching experience for all involved. Many volunteers joined hands to make the event a success, contributing to a day filled with joy and excitement. The children actively participated in various activities, including a lively dance competition, showcasing their talent and enthusiasm. We distributed cakes, chocolates, and stationery items, and provided snacks to ensure everyone had a wonderful time. On another visit, we celebrated the birthday of Sharath, the founder of Janmamithra, by sponsoring lunch for the children and conducting mind games that challenged their thinking. The event concluded with the distribution of sweets and chocolates, leaving the children with happy memories and our team feeling inspired for future events.
+                    </p>
+                </div>
+            </div>
+
+            <!-- Nachiketha Manovikasa Kendra - Independence Day -->
+            <div class="project">
+                <h2>Nachiketha Manovikasa Kendra - Independence Day</h2>
+                <div class="project-content">
+                    <img src="soverignsupport9.jpg" alt="soverignsupport Care">
+                    <p>
+                        The event organized by Janmamithra at Nachiketha Manovikasa Kendra on the 72nd Independence Day, 15th August 2018, was a truly memorable experience. The occasion highlighted the purity and innocence of children, emphasizing the importance of nurturing their growth and development. The time spent with the children was filled with joy, learning, and active participation, making them the stars of the event. A dedicated team of volunteers played a key role in ensuring the event’s success, while the valuable presence of the chief guests added to the significance of the day. Positive feedback from the parents motivated the team for future events, strengthening the community spirit.
+                    </p>
+                </div>
+            </div>
+
         </div>
     </div>
 </body>
