--- a/elderlycare.html
+++ b/elderlycare.html
@@ -24,7 +24,7 @@
                 <div class="project">
                     <h2>The Golden Hero's</h2>
                     <div class="project-content">
-                        <img src="elderly1.jpg" alt="Elderly Care">
+                        <img src="elderly1.jpeg" alt="Elderly Care">
                         <p>
                             We organized an event aimed at supporting senior citizens in old-age homes and spreading awareness about elder abuse. The day was filled with engaging activities, starting with a lively dance session where seniors and volunteers joined together to celebrate.
                         </p>
