--- a/educationcare.html
+++ b/educationcare.html
@@ -12,7 +12,7 @@
     </a>
     <div class="container">
         <div class="header">
-            <h1>Our Projects</h1>
+            <h1>Educational Care</h1>
         </div>
         <div class="content">
             <!-- First project -->
