--- a/childcare.html
+++ b/childcare.html
@@ -5,130 +5,115 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Child Care</title>
     <link rel="stylesheet" href="elderly.css">
-
 </head>
 <body>
     <a href="projects.html">
         <img src="Logo.png" alt="Logo" class="logo">
     </a>
-        <div class="header">
-            <h1>Child Care</h1>
-        </div>
-        <div class="content">
-            <!-- First project -->
-            <div class="project">
-                <h2>5th Year Anniversary Celebration
-                </h2>
-                <div class="project-content">
-                    <img src="childcare1.jpg" alt="Child Care">
-                    <p>
-                        The event organized at the charitable trust involved engaging activities with children, such as introductions and handicraft sessions, to foster creativity and social interaction. These activities not only allowed the children to express their artistic skills but also helped them build confidence and teamwork. The celebration of the organization's anniversary aimed at spreading joy and care among the children, offering them a day of fun and excitement.This event highlighted the importance of supporting and nurturing children’s emotional and social development.
-                    </p>
-                </div>
-            </div>
-
-            <div class="project">
-                <h2>Joy of Giving</h2>
-                <div class="project-content">
-                    <img src="childcare2.jpg" alt="Child Care">
-                    <p>
-                        The "Joy of Giving 2020" event was a heartfelt celebration dedicated to spreading happiness among street balloon vendor kids , ensuring they felt cared for and included during the festive season.This initiative aimed not only to light up their lives with small gestures of kindness but also to promote health and safety by providing essential protective gear. By sharing love and happiness, the event fostered a sense of togetherness and inspired the community to practice generosity and compassion.
-                    </p>
-                </div>
-            </div>
-            
-            <div class="project">
-                <h2>Sportivity
-
-                </h2>
-                <div class="project-content">
-                    <img src="childcare3.jpg" alt="Child Care">
-                    <p>
-                       
-                        The Sports Day event was a fun-filled celebration aimed at fostering teamwork, enthusiasm, and physical fitness among kids and volunteers. The day featured various engaging games and activities designed to encourage active participation and healthy competition.
-                        It provided a platform for kids to showcase their talents and for volunteers to bond with them through sportsmanship and collaboration.</p>
-                </div>
-            </div>
-
-
-            <div class="project">
-                <h2>Its an celebration
-                </h2>
-                <div class="project-content">
-                    <img src="childcare4.jpg" alt="Child Care">
-                    <p>
-                        An event was organized at a children's home, creating lasting memories through a day of joy and creativity. Volunteers actively participated, conducting engaging art and craft classes that allowed the children to express their creativity. The children, full of energy and enthusiasm, were the highlight of the event, showcasing their talents and brightening the atmosphere. Gratitude was expressed to everyone for their support, emphasizing the importance of serving others with love and care.  </p></div>
+    <div class="header">
+        <h1>Our Projects</h1>
+    </div>
+    <div class="content">
+        <!-- First project -->
+        <div class="project">
+            <h2>5th Year Anniversary Celebration</h2>
+            <div class="project-content">
+                <img src="childcare1.jpg" alt="Child Care">
+                <p>
+                    The event organized at the charitable trust involved engaging activities with children, such as introductions and handicraft sessions, to foster creativity and social interaction. These activities not only allowed the children to express their artistic skills but also helped them build confidence and teamwork. The celebration of the organization's anniversary aimed at spreading joy and care among the children, offering them a day of fun and excitement. This event highlighted the importance of supporting and nurturing children’s emotional and social development.
+                </p>
             </div>
         </div>
 
         <div class="project">
-            <h2>Children's day celebration</h2>
+            <h2>Joy of Giving</h2>
+            <div class="project-content">
+                <img src="childcare2.jpg" alt="Child Care">
+                <p>
+                    The "Joy of Giving 2020" event was a heartfelt celebration dedicated to spreading happiness among street balloon vendor kids, ensuring they felt cared for and included during the festive season. This initiative aimed not only to light up their lives with small gestures of kindness but also to promote health and safety by providing essential protective gear. By sharing love and happiness, the event fostered a sense of togetherness and inspired the community to practice generosity and compassion.
+                </p>
+            </div>
+        </div>
+
+        <div class="project">
+            <h2>Sportivity</h2>
+            <div class="project-content">
+                <img src="childcare3.jpg" alt="Child Care">
+                <p>
+                    The Sports Day event was a fun-filled celebration aimed at fostering teamwork, enthusiasm, and physical fitness among kids and volunteers. The day featured various engaging games and activities designed to encourage active participation and healthy competition. It provided a platform for kids to showcase their talents and for volunteers to bond with them through sportsmanship and collaboration.
+                </p>
+            </div>
+        </div>
+
+        <div class="project">
+            <h2>Its an Celebration</h2>
+            <div class="project-content">
+                <img src="childcare4.jpg" alt="Child Care">
+                <p>
+                    An event was organized at a children's home, creating lasting memories through a day of joy and creativity. Volunteers actively participated, conducting engaging art and craft classes that allowed the children to express their creativity. The children, full of energy and enthusiasm, were the highlight of the event, showcasing their talents and brightening the atmosphere. Gratitude was expressed to everyone for their support, emphasizing the importance of serving others with love and care.
+                </p>
+            </div>
+        </div>
+
+        <div class="project">
+            <h2>Children's Day Celebration</h2>
             <div class="project-content">
                 <img src="childcare5.jpg" alt="Child Care">
                 <p>
-                    Children's Day was celebrated at our Government School with great enthusiasm and joy. The event included fun activities, games, and performances, creating a lively and festive atmosphere. Teachers and volunteers organized special programs to engage the children and make them feel valued and appreciated. It was a day dedicated to celebrating the spirit of childhood, fostering creativity, and promoting a sense of happiness and togetherness among the students. The celebration aimed to highlight the importance of children and their role in shaping a better future.</p>
-                  </div>
-    </div>
-
-    <div class="project">
-        <h2>Quizable
-        </h2>
-        <div class="project-content">
-            <img src="childcare6.jpg" alt="Child Care">
-            <p>
-                Quizabled was a special quiz event organized for special kids, designed to engage and inspire them through fun and educational activities. The event featured interactive questions, tailored to suit the participants, encouraging learning and boosting their confidence. Volunteers and teachers ensured an inclusive and supportive environment. The quiz allowed the kids to showcase their knowledge and talents, highlighting the importance of inclusion and celebrating every child's potential. </p></div>
+                    Children's Day was celebrated at our Government School with great enthusiasm and joy. The event included fun activities, games, and performances, creating a lively and festive atmosphere. Teachers and volunteers organized special programs to engage the children and make them feel valued and appreciated. It was a day dedicated to celebrating the spirit of childhood, fostering creativity, and promoting a sense of happiness and togetherness among the students.
+                </p>
+            </div>
         </div>
 
         <div class="project">
-            <h2>Sharadhe pooje 2019
-            </h2>
+            <h2>Quizable</h2>
+            <div class="project-content">
+                <img src="childcare6.jpg" alt="Child Care">
+                <p>
+                    Quizabled was a special quiz event organized for special kids, designed to engage and inspire them through fun and educational activities. The event featured interactive questions, tailored to suit the participants, encouraging learning and boosting their confidence. Volunteers and teachers ensured an inclusive and supportive environment. The quiz allowed the kids to showcase their knowledge and talents, highlighting the importance of inclusion and celebrating every child's potential.
+                </p>
+            </div>
+        </div>
+
+        <div class="project">
+            <h2>Sharadhe Pooje 2019</h2>
             <div class="project-content">
                 <img src="childcare7.jpg" alt="Child Care">
                 <p>
-                    We had the privilege of being part of the Sharadha Pooje, marking our third consecutive year of volunteering at the event. Our team actively participated in organizing and assisting with the various rituals and activities. Volunteering at this event has become a meaningful tradition, allowing us to contribute to the celebration and share in the joy of the community. It was a fulfilling experience, strengthening our commitment to service and helping make the event memorable for all.
+                    We had the privilege of being part of the Sharadha Pooje, marking our third consecutive year of volunteering at the event. Our team actively participated in organizing and assisting with the various rituals and activities. Volunteering at this event has become a meaningful tradition, allowing us to contribute to the celebration and share in the joy of the community.
                 </p>
+            </div>
         </div>
 
         <div class="project">
-            <h2>Navajeevana Orphange Visit
-            </h2>
+            <h2>Navajeevana Orphanage Visit</h2>
             <div class="project-content">
                 <img src="childcare8.jpg" alt="Child Care">
                 <p>
-                    We had the joy of visiting Navajeevana Orphanage Home, where we spent a fun-filled day with the children. We distributed stationery items to support their learning needs and conducted a few engaging competitions that sparked excitement among them. The day was filled with laughter as we entertained each other through dancing, and to our surprise, the children showed incredible dance moves, even teaching us some steps! It was a heartwarming experience, as we shared the joy of learning, playing, and dancing together. We concluded the day by distributing snacks, ensuring everyone went home with happy memories.
-                 </p>
+                    We had the joy of visiting Navajeevana Orphanage Home, where we spent a fun-filled day with the children. We distributed stationery items to support their learning needs and conducted a few engaging competitions that sparked excitement among them. The day was filled with laughter as we entertained each other through dancing, and to our surprise, the children showed incredible dance moves, even teaching us some steps!
+                </p>
+            </div>
         </div>
 
         <div class="project">
-            <h2>Anand Marga Child home
-            </h2>
+            <h2>Anand Marga Child Home</h2>
             <div class="project-content">
                 <img src="childcare9.jpg" alt="Child Care">
                 <p>
-                    We are thrilled to announce the successful completion of the event held at Ananda Marga Children’s Home on 23rd December 2018. The event was filled with meaningful activities, starting with a cleanliness drive where the children actively participated, teaching them the importance of maintaining a clean environment. We also celebrated the birthdays of the kids, making them feel special and loved. Throughout the event, the children showcased their talents during fun games and plays, bringing joy and excitement to everyone involved. The day concluded with the distribution of snacks, leaving the children happy and energized. It was a fulfilling experience that reinforced our commitment to supporting the children and their well-being.
-                  </p>
+                    We are thrilled to announce the successful completion of the event held at Ananda Marga Children’s Home on 23rd December 2018. The event was filled with meaningful activities, starting with a cleanliness drive where the children actively participated, teaching them the importance of maintaining a clean environment. We also celebrated the birthdays of the kids, making them feel special and loved.
+                </p>
+            </div>
         </div>
 
         <div class="project">
-            <h2>Shri Sai Sneha Samasthe            </h2>
-            <div class="project-content">
-                <img src="childcare10.jpg" alt="Child Care">
-                <p>
-                    On 2nd September 2018, we organized a vibrant and engaging event at Sri Sai Sneha Samasthe, where we spent quality time with the children of the school. The day was filled with excitement as we conducted various activities such as dance, drama, and other cultural performances, which brought out the creativity and talent of the children. The atmosphere was lively and full of joy, creating lasting memories for everyone involved. To end the day on a positive note, our team distributed snacks, ensuring the children felt appreciated and cared for. The event highlighted the importance of community interaction and enriching experiences for young minds.
-             </p>
-        </div>
-
-        <div class="project">
-            <h2>Sukanksha Charitable Trust 
-            </h2>
+            <h2>Sukanksha Charitable Trust</h2>
             <div class="project-content">
                 <img src="childcare11.jpg" alt="Child Care">
                 <p>
-                    During our first visit to Sukanksha Charitable Trust, we sponsored lunch for the children and organized a series of games that brought immense joy to them. The children thoroughly enjoyed the games, and it was a wonderful opportunity to bond and create happy memories. To wrap up the event, we distributed chocolates and treats, adding a sweet touch to the day.
-
-                    On our second visit, we introduced mind games to stimulate the children's cognitive abilities and encourage creative thinking. We also distributed stationery items, helping to support their education. The event ended on a high note with the distribution of snacks, ensuring the children felt nourished and appreciated. </p>
+                    During our first visit to Sukanksha Charitable Trust, we sponsored lunch for the children and organized a series of games that brought immense joy to them. The children thoroughly enjoyed the games, and it was a wonderful opportunity to bond and create happy memories. On our second visit, we introduced mind games to stimulate the children's cognitive abilities and encourage creative thinking.
+                </p>
+            </div>
         </div>
-
     </div>
 </body>
 </html>
