--- a/projects.html
+++ b/projects.html
@@ -18,64 +18,61 @@
 
     <div class="images">
         <div class="project elderlycare">
-            <a href="elderlycare.html" target="_blank">
+            <a href="elderlycare.html">
                 <img src="elderly.jpg" alt="Elderly Care Project">
                 <div class="bottom-text">Elderly Care</div>
             </a>
         </div>
         <div class="project child">
-            <a href="childcare.html" target="_blank">
+            <a href="childcare.html">
                 <img src="child.jpg" alt="Child Care Project">
                 <div class="bottom-text">Child Care</div>
             </a>
         </div>
         <div class="project education">
-            <a href="educationcare.html" target="_blank">
+            <a href="educationcare.html">
                 <img src="education.jpg" alt="Education Project">
                 <div class="bottom-text">Education</div>
             </a>
         </div>
         <div class="project disaster">
-            <a href="disaster.html" target="_blank">
+            <a href="disaster.html">
                 <img src="disaster.jpg" alt="Disaster Relief Project">
                 <div class="bottom-text">Disaster Relief</div>
             </a>
         </div>
         <div class="project disabled">
-            <a href="disability.html" target="_blank">
+            <a href="disability.html">
                 <img src="disable2.jpg" alt="Disability Assistance Project">
                 <div class="bottom-text">Disability Assistance</div>
             </a>
         </div>
         <div class="project environment">
-            <a href="environment.html" target="_blank">
+            <a href="environment.html">
                 <img src="environment.jpg" alt="Environmental Care Project">
                 <div class="bottom-text">Environmental Care</div>
             </a>
         </div>
         <div class="project health">
-            <a href="health.html" target="_blank">
+            <a href="health.html">
                 <img src="health.jpg" alt="Health and Wellness Project">
                 <div class="bottom-text">Health and Wellness</div>
             </a>
         </div>
+
+        <div class="project Soverign">
+            <a href="soverignsupport.html">
+                <img src="soverignsupport.jpg" alt="Sovereign Support Project">
+                <div class="bottom-text">Sovereign Support</div>
+            </a>
+        </div>
+
         <div class="project Career">
-            <a href="career.html" target="_blank">
+            <a href="career.html">
                 <img src="career.jpg" alt="Career Wing">
                 <div class="bottom-text">Career Wing</div>
             </a>
         </div>
-        <div class="project Soverign">
-            <a href="soverignsupport.html" target="_blank">
-                <img src="soverignsupport.jpg" alt="Career Wing">
-                <div class="bottom-text">Soverign Support</div>
-            </a>
-        </div>
-
-
-    
     </div>
-    </div>    
-    
 </body>
 </html>
