--- a/disaster.html
+++ b/disaster.html
@@ -13,14 +13,14 @@
 
     <div class="container">
         <div class="header">
-            <h1>Disaster Care</h1>
+            <h1>Disaster</h1>
         </div>
         <div class="content">
             <!-- First project -->
             <div class="project">
                 <h2>Food Packets Distribution Drive</h2>
                 <div class="project-content">
-                    <img src="disaster1.jpeg" alt="Elderly Care">
+                    <img src="disastercare1.jpg" alt="Elderly Care">
                     <p>
                         Hunger is something no one should struggle with or judge for! At Janmamithra Trust, in association with the Rotaract Club of Vijayanagar, we took a noble initiative to support the underprivileged. We distributed food packets, sanitizers, and masks to those in need. Additionally, we created awareness about COVID-19, emphasizing hygiene and safety practices. This effort reflected our commitment to compassion and community support during challenging times.
                     </p>
